# ethoscope

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  FRONTEND_MULTI_STIMULATOR_IMPLEMENTATION.md  MULTI_STIMULATOR_FEATURE.md  QWEN.md  README  README.md  TODO  db.py  imageAcquisition.py  liveShow.py  machineId  mask.msk  pvg.py  pvg_acquire.py  pvg_acquire_cmd.py  pvg_common.py  pvg_options.py  pvg_panel_one.py  pvg_panel_two.py  pvg_standalone.py  pyproject.toml  pysolo-crashproof  pysolo_video.cfg  pysolovideo.py  pysolovideo.py~  run_tests.py  server.py  server.py~  test.msk  test2.msk  test_backup_format.py  test_backup_status.py  test_complete_logger_fix.py  test_device_scanner_fix.py  test_logger_name_fix.py  test_mask.json  (+1 more)
src/: README  install_ethoscope.sh  pyproject.toml  setup.py
src/docs/: Makefile  conf.py  ethoscope.core.rst  ethoscope.hardware.input.rst  ethoscope.hardware.interfaces.rst  ethoscope.interactors.rst  ethoscope.roi_builders.rst  ethoscope.rois.rst  ethoscope.rst  ethoscope.tests.rst  ethoscope.trackers.rst  ethoscope.utils.rst  index.rst  index.rst-bak  modules.rst  pysolovideo.hardware_control.rst  pysolovideo.rst  pysolovideo.tracking.rst  pysolovideo.utils.rst
src/ethoscope/: .coveragerc  Makefile  README  README.md  __init__.py  pyproject.toml  setup.py
src/ethoscope/core/: __init__.py  data_point.py  drawers.py  monitor.py  roi.py  tracking_unit.py  variables.py
src/ethoscope/docs/: conf.py  ethoscope.core.rst  ethoscope.drawers.rst  ethoscope.hardware.rst  ethoscope.roi_builders.rst  ethoscope.rst  ethoscope.stimulators.rst  ethoscope.trackers.rst  ethoscope.utils.rst  ethoscope.web_utils.rst  index.rst  index.rst-bak
src/ethoscope/docs/img/: uml_diagram.xmi
src/ethoscope/drawers/: __init__.py  drawers.py  subroi_drawer.py
src/ethoscope/ethoscope/: __init__.py
src/ethoscope/ethoscope/control/: __init__.py  record.py  tracking.py
src/ethoscope/ethoscope/core/: __init__.py  data_point.py  monitor.py  roi.py  tracking_unit.py  variables.py
src/ethoscope/ethoscope/drawers/: __init__.py  drawers.py
src/ethoscope/ethoscope/hardware/: __init__.py
src/ethoscope/ethoscope/io/: __init__.py  base.py  cache.py  helpers.py  mysql.py  sqlite.py
src/ethoscope/ethoscope/roi_builders/: __init__.py  arena_mask_roi_builder.py  dynamic_mask_roi_builder.py  file_based_roi_builder.py  img_roi_builder.py  roi_builders.py  target_detection_diagnostics.py  target_roi_builder.py  template.py
src/ethoscope/ethoscope/stimulators/: __init__.py  actions.py  channel_maps.py  composed_stimulator.py  multi_stimulator.py  odour_stimulators.py  optomotor_stimulators.py  sleep_depriver_stimulators.py  sleep_restriction_stimulators.py  stimulators.py  triggers.py
src/ethoscope/ethoscope/tests/: README.md  __init__.py  conftest.py  run_all_tests.sh  run_append_tests.sh  test_roi_templates.py
src/ethoscope/ethoscope/trackers/: __init__.py  adaptive_bg_tracker.py  multi_fly_tracker.py  single_roi_tracker.py  trackers.py
src/ethoscope/ethoscope/utils/: __init__.py  cache.py  debug.py  description.py  img_proc.py  io.py  pi.py  roi_template_manager.py  rpi_bad_power.py  scheduler.py  video.py  video_utils.py
src/ethoscope/ethoscope/web_utils/: __init__.py  control_thread.py  helpers.py  record.py
src/ethoscope/hardware/: __init__.py
src/ethoscope/hardware/input/: __init__.py  cameras.py
src/ethoscope/interactors/: __init__.py  fake_sleep_dep_interactor.py  interactors.py  odour_deliverer_interactor.py  sleep_depriver_interactor.py
src/ethoscope/roi_builders/: __init__.py  arena_mask_roi_builder.py  img_roi_builder.py  roi_builders.py  target_roi_builder.py
src/ethoscope/rois/: __init__.py  img_roi_builder.py  roi_builders.py  target_roi_builder.py
src/ethoscope/scripts/: device_listener.py  device_server.py  ethoclient.py
src/ethoscope/stimulators/: __init__.py  odour_stimulators.py  optomotor_stimulators.py  sleep_depriver_stimulators.py  stimulators.py
src/ethoscope/tests/: .gitignore  test_io.py  test_monitor.py  test_roi_templates.py  test_target_roi_builder.py
src/ethoscope/trackers/: __init__.py  adaptive_bg_extra_object_pos_info_tracker.py  adaptive_bg_tracker.py  detect_collision.py  harr_bg_tracker.py  multi_fly_tracker.py  multi_fly_tracker_kmeans.py  multi_fly_tracker_with_ids.py  simple_tracker.py  single_roi_tracker.py  trackers.py
src/ethoscope/tracking/: cameras.py  interactors.py  monitor.py  roi_builders.py  trackers.py  tracking_unit.py
src/ethoscope/utils/: __init__.py  debug.py  description.py  img_proc.py  io.py  roi_template_manager.py  rpi_bad_power.py  scheduler.py
src/ethoscope/web_utils/: control_thread.py  helpers.py  record.py
src/node/: .coveragerc  Makefile  README.md  RSYNC_BACKUP_README.md  TESTING_SUMMARY.md  coverage.json  package.json  pyproject.toml  run_notification_tests.py  run_tests.sh  test_notifications.py
src/node/scripts/: backup_tool.py  make_index.py  rsync_backup_tool.py  server.py  video_backup_tool.py
src/node/static/: index.html
src/node/tests/: README.md  __init__.py  conftest.py  run_auth_tests.py
src/pysolovideo/: __init__.py
src/pysolovideo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pysolovideo/hardware_control/: __init__.py  arduino_api.py
src/pysolovideo/scripts/: sleep_dep_pi.py  sleep_monitor_pi_automask.py
src/pysolovideo/tests/: test_io.py  test_utils.py
src/pysolovideo/tracking/: __init__.py  cameras.py  interactors.py  monitor.py  roi_builders.py  trackers.py  tracking_unit.py
src/pysolovideo/utils/: __init__.py  debug.py  img_proc.py  io.py  memoisation.py
src/pysolovideo/web_utils/: __init__.py  control_thread.py  helpers.py  record.py
src/scripts/: device_listener.py  device_server.conf  device_server.py  ethoclient.py  local_tracking.py  local_tracking_one_object.py  out  pi_standalone_tracking.py  record_video.py  restart.sh  restart_production.sh  sleep_dep_pi.py  sleep_monitor_pi_automask.py
src/updater/: helpers.py  update_server.py  updater.py
src/updater/static/: index.html
(+794 files in other folders)
