[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethoscope_node"
version = "1.1"
description = "Ethoscope node server Python utils- http://lab.gilest.ro/ethoscope"
readme = {text = """
The Ethoscope is a platform for high-throughput ethomics - the study of animal behavior.

This package provides the node server components and Python utilities for the Ethoscope platform,
which enables automated, long-term behavioral monitoring and analysis of small model organisms
such as Drosophila melanogaster (fruit flies).

The Ethoscope system allows researchers to:
- Monitor animal behavior continuously over extended periods
- Perform high-throughput behavioral experiments
- Analyze behavioral patterns with automated tracking algorithms
- Integrate environmental controls and perturbations

This ethoscope_node package specifically handles the server-side functionality for managing
individual Ethoscope devices, data collection, and communication within the Ethoscope network.

For more information, visit: http://lab.gilest.ro/ethoscope
""", content-type = "text/plain"}
authors = [
    {name = "Giorgio Gilestro", email = "giorgio@gilest.ro"}
]
license = {text = "GPL-3.0"}
keywords = ["behaviour", "video tracking", "ethomics", "node server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "bottle>=0.13.4",
    "cherrypy>=18.10.0",
    "mysql-connector-python>=9.3.0",
    "netifaces>=0.11.0",
    "GitPython>=3.1.44",
    "zeroconf>=0.147.0",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pyserial>=3.5",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "python-dateutil>=2.9.0",
    "mattermostdriver>=7.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "mock>=2.0.0",
    "responses>=0.25.0",
    "fakeredis>=2.0.0",
    "Sphinx>=1.4.4",
    "sphinx_rtd_theme>=0.1.9",
]
testing = [
    "psutil>=5.8.0",
    "requests>=2.32.4",
    "pytest-mock>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/gilestrolab/ethoscope"
Repository = "https://github.com/gilestrolab/ethoscope"
Documentation = "http://lab.gilest.ro/ethoscope"

[project.scripts]
backup_tool = "scripts.backup_tool:main"
make_index = "scripts.make_index:main"
server = "scripts.server:main"
video_backup_tool = "scripts.video_backup_tool:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ethoscope_node*"]

[tool.setuptools.package-data]
ethoscope_node = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "functional: marks tests as functional tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]